# apro-svm-oracle

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
e2e/: integration.ts
oracle_sdk/: Cargo.toml
oracle_sdk/src/: lib.rs
programs/apro_svm/: Cargo.toml
programs/apro_svm/src/: errors.rs  lib.rs
programs/apro_svm/src/constants/: mod.rs
programs/apro_svm/src/instructions/: add_oracle.rs  initialize_oracle.rs  mod.rs  update_admin.rs  update_price.rs
programs/apro_svm/src/states/: mod.rs  oracle_state.rs  price_feed.rs
programs/oracle_client_example/: Cargo.toml
programs/oracle_client_example/src/: lib.rs
programs/oracle_consumer_example/: Cargo.toml
programs/oracle_consumer_example/src/: lib.rs
tests/: apro_svm.ts  e2e.ts
